@@ -1,5 +1,13 @@
 2019-11-13  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/poke.pkl/get-ios-1.pk: New test.
+	* testsuite/poke.pkl/get-ios-2.pk: Likewise.
+	* testsuite/poke.pkl/set-ios-1.pk: Likewise.
+	* testsuite/poke.pkl/close-1.pk: Likewise.
+	* testsuite/poke.pkl/open-1.pk: Likewise.
+
+2019-11-13  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* doc/poke.texi (IO Spaces): New section.
 	(open): New subsection.
 	(close): Likewise.
